# pramda

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml  setup.py  update-requirements.sh
.github/workflows/: prod-deploy.yaml  test-deploy.yaml
docs/docs/source/: modules.rst  pramda.rst
docs/source/: conf.py  index.rst  modules.rst
functions/: __init__.py  add.py  add_test.py  adjust.py  all.py  all_test.py  any.py  any_test.py  cond.py  cond_test.py  curry.py  gt.py  gt_test.py  gte.py  gte_test.py  is_truthy.py  lt.py  lt_test.py  lte.py  lte_test.py  map.py  map_test.py  pipe.py  reduce.py
pramda/: __init__.py  add.py  adjust.py  adjust_test.py  all.py  all_pass.py  all_pass_test.py  always.py  any.py  any_pass.py  any_pass_test.py  cond.py  cond_test.py  dec.py  filter.py  filter_test.py  find.py  find_test.py  inc.py  map.py  omit.py  omit_test.py  pick.py  pick_test.py  pipe.py  pipe_test.py  reduce.py  reduce_test.py
test/: test_add.py  test_adjust.py  test_all.py  test_any.py  test_pipe.py  test_reduce.py
