[tool.poetry]
name = "pramda"
version = "1.4.0"
description = "Pramda helps you implement functional programming in Python"
authors = ["myuksal <jupyter@kakao.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/pramda/pramda"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pre-commit = "^4.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
